@@ -63,6 +63,8 @@ if ($#extensions > -1) {
   # list of extensions to be kept
   foreach my $file (@intermediates) {
 
+    next unless defined $file;
+
     # Loop round if the filename ends in  _number
     # since we will treat these as special eg raw data files
     next if $file =~ /_\d+$/;
