@@ -227,6 +227,8 @@ for (my $i = 0; $i < $Frm->nsubs; $i++) {
     orac_print "  ***** Fit failed *****\n",'red';
 
     # Update the file name in the frame to bad
+    # In order to prevent the display system from attempting
+    # to display the raw data.
     $Frm->file($i+1, undef);
 
   }
