@@ -1,3 +1,7 @@
+2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* SCUBA/_DELETE_TEMP_FILES_: Fix warnings if file is undef
+
 2001-06-13  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* SCUBA/_SELF_CORRECT_POINTING_: Create
