@@ -1,5 +1,7 @@
 2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame.pm (gui_id): Fix warnings when file() is undef
+
 	* Msg/Control/AMS.pm: Use ADAM_NOPROMPT to turn off prompting
 
 2001-10-18  Tim Jenness  <timj@jach.hawaii.edu>
